2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/integria_cron.php: Modified the function
	"run_auto_incident_close" to disable the tickets close
	if the value is empty or negative.

	* include/help/en/help_auto_incident_close.php,
	  include/help/es/help_auto_incident_close.php: Updated
	the help to explain how to disable the auto incident
	close functionality.

2014-04-30  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/incidents/incident_detail.php: Now the page
	makes a redirect to the incident dashboard detail when
	a ticket is created, instead of loading the incident
	dashboard detail script.

2014-04-30  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* integria_demo.sql,
	  godmode/setup/setup_crm.php,
	  include/functions_config.php,
	  operation/leads/lead_detail.php,
	  operation/leads/template_manager.php: Removed the lead
	company filter.

2014-04-30  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/config_process.php: Now the url use the 'baseurl'
	config token to build the complete 'base_url'.

	* install.php: Now is possible to save a relative url path
	from the server to integria. This should fix the images error.

2014-04-30  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/companies/company_detail.php: Verify
	deletion of companies.

2014-04-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* general/home.php
	  godmode/setup/newsboard.php
	  include/functions_db.php
	  operation/invoices/invoice_detail.php
	  operation/invoices/invoice_template.php
	  operation/invoices/invoices.php
	  operation/user_report/monthly.php
	  operation/user_report/report_monthly.php: Fixed several
	bugs (#725, #728, #742, #744).

2014-04-29  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/incidents/incident_detail.php: Now the new
	resolution epilog text is saved as a ticket workunit.

2014-04-28 Sancho Lerena <slerena@artica.es>

	* operation/newsletter/address_definition.php: Fixed an ACL