@@ -1,5 +1,12 @@
 2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
 
+	* operation/leads/lead_detail.php,
+	  operation/leads/lead_pipeline.php,
+	  operation/leads/lead_statistics.php: Now is possible
+	to search the not owned leads only.
+
+2014-05-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
+
 	* include/integria_cron.php: Modified the function
 	"run_auto_incident_close" to disable the tickets close
 	if the value is empty or negative.
